--- a/02_performing_stocks/finished_files/001_equal_weight_S&P_500.ipynb
+++ b/02_performing_stocks/finished_files/001_equal_weight_S&P_500.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "The goal of this section of the course is to create a Python script that will accept the value of your portfolio and tell you how many shares of each S&P 500 constituent you should purchase to get an equal-weight version of the index fund.\n",
     "\n",
+    "An equal-weight version of an index fund is a type of index fund where each constituent stock is given the same importance or weight in the portfolio, regardless of the company's market capitalization. This contrasts with traditional market-capitalization-weighted index funds, where the weighting of each stock in the index is proportional to its market value, meaning larger companies have a greater influence on the index's performance.\n",
+    "\n",
     "## Library Imports\n",
     "\n",
     "The first thing we need to do is import the open-source software libraries that we'll be using in this tutorial."
