updates to files

--- a/02_performing_stocks/finished_files/002_quantitative_momentum_strategy.ipynb
+++ b/02_performing_stocks/finished_files/002_quantitative_momentum_strategy.ipynb
@@ -133,11 +133,6 @@
     }
    ],
    "source": [
-    "# symbol = 'AAPL'\n",
-    "# api_url = f'https://sandbox.iexapis.com/stable/stock/{symbol}/stats?token={IEX_CLOUD_API_TOKEN}'\n",
-    "# data = requests.get(api_url).json()\n",
-    "# data\n",
-    "\n",
     "symbol='aapl'\n",
     "url = f'https://api.iex.cloud/v1/data/core/advanced_stats/{symbol}?token={IEX_CLOUD_API_TOKEN}'\n",
     "outer_data = requests.get(url).json()\n",
@@ -171,8 +166,6 @@
    ],
    "source": [
     "data = outer_data[0]\n",
-    "# data\n",
-    "# data['avgTotalVolume']\n",
     "data['year1ChangePercent']"
    ]
   },
@@ -368,41 +361,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A,AAL,AAP,AAPL,ABBV,ABC,ABMD,ABT,ACN,ADBE,ADI,ADM,ADP,ADSK,AEE,AEP,AES,AFL,AIG,AIV,AIZ,AJG,AKAM,ALB,ALGN,ALK,ALL,ALLE,ALXN,AMAT,AMCR,AMD,AME,AMGN,AMP,AMT,AMZN,ANET,ANSS,ANTM,AON,AOS,APA,APD,APH,APTV,ARE,ATO,ATVI,AVB,AVGO,AVY,AWK,AXP,AZO,BA,BAC,BAX,BBY,BDX,BEN,BF.B,BIIB,BIO,BK,BKNG,BKR,BLK,BLL,BMY,BR,BRK.B,BSX,BWA,BXP,C,CAG,CAH,CARR,CAT,CB,CBOE,CBRE,CCI,CCL,CDNS,CDW,CE,CERN,CF,CFG,CHD,CHRW,CHTR,CI,CINF,CL,CLX,CMA,CMCSA\n",
-      "CME,CMG,CMI,CMS,CNC,CNP,COF,COG,COO,COP,COST,COTY,CPB,CPRT,CRM,CSCO,CSX,CTAS,CTL,CTSH,CTVA,CTXS,CVS,CVX,CXO,D,DAL,DD,DE,DFS,DG,DGX,DHI,DHR,DIS,DISCA,DISCK,DISH,DLR,DLTR,DOV,DOW,DPZ,DRE,DRI,DTE,DUK,DVA,DVN,DXC,DXCM,EA,EBAY,ECL,ED,EFX,EIX,EL,EMN,EMR,EOG,EQIX,EQR,ES,ESS,ETFC,ETN,ETR,EVRG,EW,EXC,EXPD,EXPE,EXR,F,FANG,FAST,FB,FBHS,FCX,FDX,FE,FFIV,FIS,FISV,FITB,FLIR,FLS,FLT,FMC,FOX,FOXA,FRC,FRT,FTI,FTNT,FTV,GD,GE,GILD\n",
-      "GIS,GL,GLW,GM,GOOG,GOOGL,GPC,GPN,GPS,GRMN,GS,GWW,HAL,HAS,HBAN,HBI,HCA,HD,HES,HFC,HIG,HII,HLT,HOLX,HON,HPE,HPQ,HRB,HRL,HSIC,HST,HSY,HUM,HWM,IBM,ICE,IDXX,IEX,IFF,ILMN,INCY,INFO,INTC,INTU,IP,IPG,IPGP,IQV,IR,IRM,ISRG,IT,ITW,IVZ,J,JBHT,JCI,JKHY,JNJ,JNPR,JPM,K,KEY,KEYS,KHC,KIM,KLAC,KMB,KMI,KMX,KO,KR,KSS,KSU,L,LB,LDOS,LEG,LEN,LH,LHX,LIN,LKQ,LLY,LMT,LNC,LNT,LOW,LRCX,LUV,LVS,LW,LYB,LYV,MA,MAA,MAR,MAS,MCD,MCHP\n",
-      "MCK,MCO,MDLZ,MDT,MET,MGM,MHK,MKC,MKTX,MLM,MMC,MMM,MNST,MO,MOS,MPC,MRK,MRO,MS,MSCI,MSFT,MSI,MTB,MTD,MU,MXIM,MYL,NBL,NCLH,NDAQ,NEE,NEM,NFLX,NI,NKE,NLOK,NLSN,NOC,NOV,NOW,NRG,NSC,NTAP,NTRS,NUE,NVDA,NVR,NWL,NWS,NWSA,O,ODFL,OKE,OMC,ORCL,ORLY,OTIS,OXY,PAYC,PAYX,PBCT,PCAR,PEAK,PEG,PEP,PFE,PFG,PG,PGR,PH,PHM,PKG,PKI,PLD,PM,PNC,PNR,PNW,PPG,PPL,PRGO,PRU,PSA,PSX,PVH,PWR,PXD,PYPL,QCOM,QRVO,RCL,RE,REG,REGN,RF,RHI,RJF,RL,RMD,ROK\n",
-      "ROL,ROP,ROST,RSG,RTX,SBAC,SBUX,SCHW,SEE,SHW,SIVB,SJM,SLB,SLG,SNA,SNPS,SO,SPG,SPGI,SRE,STE,STT,STX,STZ,SWK,SWKS,SYF,SYK,SYY,T,TAP,TDG,TDY,TEL,TFC,TFX,TGT,TIF,TJX,TMO,TMUS,TPR,TROW,TRV,TSCO,TSN,TT,TTWO,TWTR,TXN,TXT,TYL,UA,UAA,UAL,UDR,UHS,ULTA,UNH,UNM,UNP,UPS,URI,USB,V,VAR,VFC,VIAC,VLO,VMC,VNO,VRSK,VRSN,VRTX,VTR,VZ,WAB,WAT,WBA,WDC,WEC,WELL,WFC,WHR,WLTW,WM,WMB,WMT,WRB,WRK,WST,WU,WY,WYNN,XEL,XLNX,XOM,XRAY,XRX,XYL\n",
-      "YUM,ZBH,ZBRA,ZION,ZTS\n"
-     ]
-    }
-   ],
-   "source": [
-    "# # Function sourced from \n",
-    "# # https://stackoverflow.com/questions/312443/how-do-you-split-a-list-into-evenly-sized-chunks\n",
-    "# def chunks(lst, n):\n",
-    "#     \"\"\"Yield successive n-sized chunks from lst.\"\"\"\n",
-    "#     for i in range(0, len(lst), n):\n",
-    "#         yield lst[i:i + n]   \n",
-    "        \n",
-    "# symbol_groups = list(chunks(stocks['Ticker'], 100))\n",
-    "# symbol_strings = []\n",
-    "# for i in range(0, len(symbol_groups)):\n",
-    "#     symbol_strings.append(','.join(symbol_groups[i]))\n",
-    "#     print(symbol_strings[i])\n",
-    "\n",
-    "# my_columns = ['Ticker', 'Price', 'One-Year Price Return', 'Number of Shares to Buy']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -432,43 +390,6 @@
    "metadata": {},
    "source": [
     "Now we need to create a blank DataFrame and add our data to the data frame one-by-one."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m     data \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(batch_api_call_url)\u001b[38;5;241m.\u001b[39mjson()\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m symbol \u001b[38;5;129;01min\u001b[39;00m symbol_string\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m---> 10\u001b[0m         new_row \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mSeries([symbol, \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43msymbol\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquote\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatestPrice\u001b[39m\u001b[38;5;124m'\u001b[39m], data[symbol][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstats\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124myear1ChangePercent\u001b[39m\u001b[38;5;124m'\u001b[39m],\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mN/A\u001b[39m\u001b[38;5;124m'\u001b[39m], index \u001b[38;5;241m=\u001b[39m my_columns)\n\u001b[0;32m     11\u001b[0m         final_dataframe \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([final_dataframe, pd\u001b[38;5;241m.\u001b[39mDataFrame([new_row])], ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     14\u001b[0m final_dataframe\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
-    }
-   ],
-   "source": [
-    "# final_dataframe = pd.DataFrame(columns = my_columns)\n",
-    "\n",
-    "# for symbol_string in symbol_strings:\n",
-    "# #     print(symbol_strings)\n",
-    "#     # batch_api_call_url = f'https://sandbox.iexapis.com/stable/stock/market/batch/?types=stats,quote&symbols={symbol_string}&token={IEX_CLOUD_API_TOKEN}'\n",
-    "#     batch_api_call_url = f'https://api.iex.cloud/v1/data/core/QUOTE,ADVANCED_STATS/{symbol}?token={IEX_CLOUD_API_TOKEN}'\n",
-    "#     outer_data = requests.get(batch_api_call_url).json()\n",
-    "#     dataOne = outer_data[0]\n",
-    "#     dataTwo = outer_data[1]\n",
-    "\n",
-    "#     for symbol in symbol_string.split(','):\n",
-    "#         # new_row = pd.Series([symbol, data[symbol]['quote']['latestPrice'], data[symbol]['stats']['year1ChangePercent'],'N/A'], index = my_columns)\n",
-    "#         new_row = pd.Series([symbol, dataOne['latestPrice'], dataTwo['year1ChangePercent'],'N/A'], index = my_columns)\n",
-    "#         final_dataframe = pd.concat([final_dataframe, pd.DataFrame([new_row])], ignore_index=True)\n",
-    "        \n",
-    "    \n",
-    "# final_dataframe"
    ]
   },
   {
@@ -988,47 +909,6 @@
     }
    ],
    "source": [
-    "# hqm_columns = [\n",
-    "#                 'Ticker', \n",
-    "#                 'Price', \n",
-    "#                 'Number of Shares to Buy', \n",
-    "#                 'One-Year Price Return', \n",
-    "#                 'One-Year Return Percentile',\n",
-    "#                 'Six-Month Price Return',\n",
-    "#                 'Six-Month Return Percentile',\n",
-    "#                 'Three-Month Price Return',\n",
-    "#                 'Three-Month Return Percentile',\n",
-    "#                 'One-Month Price Return',\n",
-    "#                 'One-Month Return Percentile',\n",
-    "#                 'HQM Score'\n",
-    "#                 ]\n",
-    "\n",
-    "# hqm_dataframe = pd.DataFrame(columns = hqm_columns)\n",
-    "\n",
-    "# for symbol_string in symbol_strings:\n",
-    "# #     print(symbol_strings)\n",
-    "#     batch_api_call_url = f'https://sandbox.iexapis.com/stable/stock/market/batch/?types=stats,quote&symbols={symbol_string}&token={IEX_CLOUD_API_TOKEN}'\n",
-    "#     data = requests.get(batch_api_call_url).json()\n",
-    "#     for symbol in symbol_string.split(','):\n",
-    "#         hqm_dataframe = hqm_dataframe.append(\n",
-    "#                                         pd.Series([symbol, \n",
-    "#                                                    data[symbol]['quote']['latestPrice'],\n",
-    "#                                                    'N/A',\n",
-    "#                                                    data[symbol]['stats']['year1ChangePercent'],\n",
-    "#                                                    'N/A',\n",
-    "#                                                    data[symbol]['stats']['month6ChangePercent'],\n",
-    "#                                                    'N/A',\n",
-    "#                                                    data[symbol]['stats']['month3ChangePercent'],\n",
-    "#                                                    'N/A',\n",
-    "#                                                    data[symbol]['stats']['month1ChangePercent'],\n",
-    "#                                                    'N/A',\n",
-    "#                                                    'N/A'\n",
-    "#                                                    ], \n",
-    "#                                                   index = hqm_columns), \n",
-    "#                                         ignore_index = True)\n",
-    "        \n",
-    "# hqm_dataframe.columns\n",
-    "\n",
     "hqm_columns = [\n",
     "                'Ticker', \n",
     "                'Price', \n",
@@ -1693,8 +1573,6 @@
     "                'One-Month'\n",
     "                ]\n",
     "\n",
-    "# for row in hqm_dataframe.index:\n",
-    "#     for time_period in time_periods:\n",
     "#         change_col = f'{time_period} Price Return'\n",
     "#         percentile_col = f'{time_period} Return Percentile'\n",
     "#         hqm_dataframe.loc[row, percentile_col] = stats.percentileofscore(hqm_dataframe[change_col], hqm_dataframe.loc[row,change_col])\n",
@@ -1753,9 +1631,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selecting the 50 Best Momentum Stocks\n",
+    "## Selecting the 20 Best Momentum Stocks\n",
     "\n",
-    "As before, we can identify the 50 best momentum stocks in our universe by sorting the DataFrame on the `HQM Score` column and dropping all but the top 50 entries."
+    "As before, we can identify the 20 best momentum stocks by sorting the DataFrame on the `HQM Score` column and dropping all but the top 20 entries."
    ]
   },
   {
