--- a/02_performing_stocks/finished_files/003_quantitative_value_strategy.ipynb
+++ b/02_performing_stocks/finished_files/003_quantitative_value_strategy.ipynb
@@ -127,11 +127,6 @@
     }
    ],
    "source": [
-    "# symbol = 'AAPL'\n",
-    "# api_url = f'https://sandbox.iexapis.com/stable/stock/{symbol}/quote?token={IEX_CLOUD_API_TOKEN}'\n",
-    "# data = requests.get(api_url).json()\n",
-    "# data\n",
-    "\n",
     "symbol='aapl'\n",
     "url = f'https://api.iex.cloud/v1/data/core/quote/{symbol}?token={IEX_CLOUD_API_TOKEN}'\n",
     "outer_data = requests.get(url).json()\n",
@@ -360,61 +355,6 @@
    "outputs": [],
    "source": [
     "refrence_dataframe = final_dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Function sourced from \n",
-    "# # https://stackoverflow.com/questions/312443/how-do-you-split-a-list-into-evenly-sized-chunks\n",
-    "# def chunks(lst, n):\n",
-    "#     \"\"\"Yield successive n-sized chunks from lst.\"\"\"\n",
-    "#     for i in range(0, len(lst), n):\n",
-    "#         yield lst[i:i + n]   \n",
-    "        \n",
-    "# symbol_groups = list(chunks(stocks['Ticker'], 100))\n",
-    "# symbol_strings = []\n",
-    "# for i in range(0, len(symbol_groups)):\n",
-    "#     symbol_strings.append(','.join(symbol_groups[i]))\n",
-    "# #     print(symbol_strings[i])\n",
-    "\n",
-    "# my_columns = ['Ticker', 'Price', 'Price-to-Earnings Ratio', 'Number of Shares to Buy']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we need to create a blank DataFrame and add our data to the data frame one-by-one."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# final_dataframe = pd.DataFrame(columns = my_columns)\n",
-    "\n",
-    "# for symbol_string in symbol_strings:\n",
-    "# #     print(symbol_strings)\n",
-    "#     batch_api_call_url = f'https://sandbox.iexapis.com/stable/stock/market/batch/?types=quote&symbols={symbol_string}&token={IEX_CLOUD_API_TOKEN}'\n",
-    "#     data = requests.get(batch_api_call_url).json()\n",
-    "#     for symbol in symbol_string.split(','):\n",
-    "#         final_dataframe = final_dataframe.append(\n",
-    "#                                         pd.Series([symbol, \n",
-    "#                                                    data[symbol]['quote']['latestPrice'],\n",
-    "#                                                    data[symbol]['quote']['peRatio'],\n",
-    "#                                                    'N/A'\n",
-    "#                                                    ], \n",
-    "#                                                   index = my_columns), \n",
-    "#                                         ignore_index = True)\n",
-    "        \n",
-    "    \n",
-    "# final_dataframe"
    ]
   },
   {
@@ -938,35 +878,6 @@
     "* Enterprise Value divided by Gross Profit (EV/GP)\n",
     "\n",
     "Some of these metrics aren't provided directly by the IEX Cloud API, and must be computed after pulling raw data. We'll start by calculating each data point from scratch."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# symbol = 'AAPL'\n",
-    "# batch_api_call_url = f'https://sandbox.iexapis.com/stable/stock/market/batch/?types=advanced-stats,quote&symbols={symbol}&token={IEX_CLOUD_API_TOKEN}'\n",
-    "# data = requests.get(batch_api_call_url).json()\n",
-    "\n",
-    "# # P/E Ratio\n",
-    "# pe_ratio = data[symbol]['quote']['peRatio']\n",
-    "\n",
-    "# # P/B Ratio\n",
-    "# pb_ratio = data[symbol]['advanced-stats']['priceToBook']\n",
-    "\n",
-    "# #P/S Ratio\n",
-    "# ps_ratio = data[symbol]['advanced-stats']['priceToSales']\n",
-    "\n",
-    "# # EV/EBITDA\n",
-    "# enterprise_value = data[symbol]['advanced-stats']['enterpriseValue']\n",
-    "# ebitda = data[symbol]['advanced-stats']['EBITDA']\n",
-    "# ev_to_ebitda = enterprise_value/ebitda\n",
-    "\n",
-    "# # EV/GP\n",
-    "# gross_profit = data[symbol]['advanced-stats']['grossProfit']\n",
-    "# ev_to_gross_profit = enterprise_value/gross_profit"
    ]
   },
   {
@@ -2377,9 +2288,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selecting the 50 Best Value Stocks¶\n",
+    "## Selecting the 20 Best Value Stocks¶\n",
     "\n",
-    "As before, we can identify the 50 best value stocks in our universe by sorting the DataFrame on the RV Score column and dropping all but the top 50 entries."
+    "As before, we can identify the 20 best value stocksby sorting the DataFrame on the RV Score column and dropping all but the top 20 entries."
    ]
   },
   {
